@@ -97,9 +97,13 @@ $labels['replytoallmessage'] = 'Reply to sender and all recipients';
 $labels['forwardmessage']   = 'Forward the message';
 $labels['deletemessage']    = 'Move message to trash';
 $labels['printmessage']     = 'Print this message';
+$labels['previousmessage']  = 'Show the previous message';
 $labels['previousmessages'] = 'Show previous set of messages';
+$labels['firstmessage']     = 'Show the first message';
 $labels['firstmessages']    = 'Show first set of messages';
+$labels['nextmessage']      = 'Show the next message';
 $labels['nextmessages']     = 'Show next set of messages';
+$labels['lastmessage']      = 'Show the last messages';
 $labels['lastmessages']     = 'Show last set of messages';
 $labels['backtolist']       = 'Back to message list';
 $labels['viewsource']       = 'Show source';
